Line graph complete

--- a/RustDetector.blazor/Components/Pages/Table.razor
+++ b/RustDetector.blazor/Components/Pages/Table.razor
@@ -45,7 +45,7 @@ else
 }
 
 @code {
-    private class JobData
+    public class JobData
     {
         public int id { get; set; }
         public int month { get; set; }
