--- a/RustDetector.blazor/Components/Layout/MainLayout.razor
+++ b/RustDetector.blazor/Components/Layout/MainLayout.razor
@@ -7,7 +7,7 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://www.linkedin.com/in/z-shaffer/" target="_blank">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/z-shaffer/" target="_blank">Contact</a>
         </div>
 
         <article class="content px-4">
