--- a/RustDetector.blazor/Components/Layout/MainLayout.razor
+++ b/RustDetector.blazor/Components/Layout/MainLayout.razor
@@ -1,15 +1,11 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="page">
-    <div class="sidebar">
+    <div class="sidebar w-5">
         <NavMenu/>
     </div>
 
     <main>
-        <div class="top-row px-4">
-            <a href="https://www.linkedin.com/in/z-shaffer/" target="_blank">Contact</a>
-        </div>
-
         <article class="content px-4">
             @Body
         </article>
