--- a/RustDetector.blazor/Components/Layout/MainLayout.razor.css
+++ b/RustDetector.blazor/Components/Layout/MainLayout.razor.css
@@ -12,7 +12,11 @@ main {
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-image: linear-gradient(180deg, rgb(40, 20, 0) 0%, #382211 70%);
+}
+
+.w-5 {
+    max-width: 10%;
 }
 
 .top-row {
