--- a/RustDetector.blazor/Components/Pages/Graph.razor
+++ b/RustDetector.blazor/Components/Pages/Graph.razor
@@ -7,7 +7,7 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="./graphInterop.js"></script>
 
-<PageTitle>Graph View</PageTitle>
+<PageTitle>Rust Detector</PageTitle>
 @if (_jobDataSet == null)
 {
     <p>
