--- a/RustDetector.blazor/Components/Pages/Table.razor
+++ b/RustDetector.blazor/Components/Pages/Table.razor
@@ -3,7 +3,7 @@
 @using System.Text.Json
 @using System.Globalization
 
-<PageTitle>Table View</PageTitle>
+<PageTitle>Rust Detector</PageTitle>
 
 <h1>Table View</h1>
 
