--- a/RustDetector.blazor/Components/Pages/Graph.razor
+++ b/RustDetector.blazor/Components/Pages/Graph.razor
@@ -8,20 +8,24 @@
 <script src="./graphInterop.js"></script>
 
 <PageTitle>Rust Detector</PageTitle>
-@if (_jobDataSet == null)
-{
-    <p>
-        <em>Loading...</em>
-    </p>
-}
-else
-{
-    <div>
-        <canvas id="graph"></canvas>
-    </div>
-}
+<div class="d-flex justify-content-center align-items-center" style="min-height: 100vh;">
+    @if (isLoading)
+    {
+        <div class="spinner-border" role="status">
+            <span class="sr-only">Detecting...</span>
+        </div>
+    }
+    else
+    {
+        <div>
+            <canvas id="graph"></canvas>
+        </div>
+    }
+</div>
 
 @code {
+    private bool isLoading = true;
+    
     public class JobData
     {
         public int id { get; set; }
@@ -50,7 +54,9 @@ else
     {
         if (firstRender)
         {
+            isLoading = true;
             await InitializeGraph();
+            isLoading = false;
         }
     }
 }
